--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 VITE_PORT = 3100
 
 # spa-title
-VITE_GLOB_APP_TITLE = Vue3模板
+VITE_GLOB_APP_TITLE = xxxxx仿真演示系统
 
 # spa shortname
 VITE_GLOB_APP_SHORT_NAME = 
