--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "picocolors": "^1.0.0",
     "postcss": "^8.4.26",
     "prettier": "^2.8.8",
+    "svg-sprite-loader": "^6.0.11",
     "vite": "^4.3.9",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-html": "^3.2.0",
