--- a/.env.development
+++ b/.env.development
@@ -4,13 +4,15 @@ VITE_PUBLIC_PATH = /
 
 # Cross-domain proxy, you can configure multiple
 # Please note that no line breaks
-VITE_PROXY = [["/api","http://192.168.33.51:7904/task"],["/upload","http://192.168.33.51:7904/upload"]]
+VITE_PROXY = [["/api","http://192.168.33.51:7904/task"],["/chemical","http://192.168.50.51:3001"],["/upload","http://192.168.33.51:7904/upload"]]
 
 # Delete console
 VITE_DROP_CONSOLE = false
 
-# Basic interface address SPA
+# 默认接口地址
 VITE_GLOB_API_URL=/api
+# 化学品接口地址
+VITE_GLOB_CHEMICAL_URL=/chemical
 
 # File upload address， optional
 VITE_GLOB_UPLOAD_URL=/upload
