--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,11 @@
+###
+ # @Author: sunyue
+ # @Date: 2023-12-01 15:53:08
+ # @LastEditors: sunyue
+ # @LastEditTime: 2023-12-06 21:21:35
+ # @Description: 描述
+ # Copyright (c) 2023 by 中国科学院软件研究所, All Rights Reserved. 
+### 
 
 # public path
 VITE_PUBLIC_PATH = /
@@ -15,7 +23,7 @@ VITE_GLOB_API_URL=/api
 VITE_GLOB_CHEMICAL_URL=/chemical
 
 # File upload address， optional
-VITE_GLOB_UPLOAD_URL=/upload
+VITE_GLOB_UPLOAD_URL=/
 
 # Interface prefix
 VITE_GLOB_API_URL_PREFIX=
